src/index.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

:root {
    --c1: #22346B;
    --c2: #24B8EC;
    --heading-font: "Poppins", sans-serif;
    --body-font: "Noto Sans", sans-serif;
    --button-shadow: -6px 6px 11px 0px #00000069;
}

a {
    text-decoration: none !important;
}

p {
    font-weight: 340;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-weight: bold;
}

h1,
h2,
h3,
h4,
h5,
h6,
button {
    font-family: var(--heading-font) !important;
}

body {
    margin: 0;
    padding: 0;
    font-family: var(--body-font) !important;
    /* background-color: #ffffff; */
    background: linear-gradient(#ffffff41, #ffffffb0), url(../public/assets/images/body-bg.png);
    background-attachment: fixed;
    background-size: cover;
    background-position: center;
    /* overflow-x: hidden; */
}

/* section:nth-child(odd) {
    background: #ffffff;
}

section:nth-child(even) {
    background: linear-gradient(to bottom,
            #ffffff 0%,
            #cbedf97a 50%,
            #ffffff 100%);
} */

img {
    -webkit-user-drag: none;
}

.w-fit-content {
    width: fit-content !important;
}

.preloader {
    position: fixed;
    inset: 0;
    background: #fff;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 9999;
}

.loader {
    position: relative;
    width: 120px;
    height: 120px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.loader img {
    width: 60px;
    z-index: 2;
}

/* Circular spinner */
.spinner {
    position: absolute;
    width: 120px;
    height: 120px;
    border: 3px solid rgba(0, 0, 0, 0.1);
    border-top-color: #000;
    border-radius: 50%;
    animation: spin 1s linear infinite;
}

/* Spinner animation */
@keyframes spin {
    to {
        transform: rotate(360deg);
    }
}

.signUpBut {
    color: #ffffff;
    padding: 10px 15px;
    background: linear-gradient(to bottom, var(--c2), var(--c1));
    border: 0;
    box-shadow: -7px 10px 17px 0px #0000003d;
    border-radius: 12px;
    white-space: nowrap;
}

.bg_light_grey {
    background: #00000008 !important;
}

.text-c1 {
    color: var(--c1);
}

.text-c2 {
    color: var(--c2);
}

.sub_heading {
    font-size: 12px;
}

.section_container {
    max-width: 1900px;
    margin: auto;
    width: 100%;
    padding-left: 50px;
    padding-right: 50px;
}

.navbar_links.active {
    position: fixed;
    z-index: 99;
    top: 0;
    left: 0;
    right: 0;
    background: #ffffff;
    transition: all .3s ease-out;
}

.nav_parent {
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 100%;
}

.btn_login,
.btn_signup {
    padding: 5px 20px;
    border-radius: 6px;
    text-wrap: nowrap;
    display: flex;
}

.btn_login {
    border: 1px solid var(--c2);
    color: var(--c2);
    background-color: transparent;
    transition: all .5s ease-out;
}

.btn_login:hover {
    background-color: var(--c2);
    color: #ffffff;
    transition: all .5s ease-out;
}

.btn_signup {
    border: 1px solid var(--c1);
    color: #ffffff;
    background-color: var(--c1);
    transition: all .5s ease-out;
}

.btn_signup:hover {
    background-color: #121e41;
    transition: all .5s ease-out;
}

.v-navbar {
    position: relative;
}

.v-navbar .search_parent {
    position: absolute;
    left: 0;
    right: 0;
    z-index: 9;
}

.search_parent i {
    position: absolute;
    display: flex;
    left: 12px;
    top: 0;
    bottom: 0;
    margin: auto;
    z-index: 1;
    align-items: center;
    font-size: 15px;
}

.v-navbar input[type="search"]::placeholder {
    color: var(--c1);
    font-family: var(--heading-font);
}

.v-navbar input[type="search"] {
    color: var(--c1);
    padding: 8px 15px;
    border: 1px solid var(--c1);
    border-radius: 24.5px;
    text-indent: 20px;
}

.login_signup_sec {
    font-size: 14px;
    font-weight: 500;
}

.menu-icon {
    display: none;
}

.nav-elements {
    padding: 0 30px;
    width: 100%;
}

.nav-elements ul {
    width: fit-content;
    margin: auto;
    display: flex;
    justify-content: center;
    list-style-type: none;
    align-items: center;
}

.nav-elements ul li {
    padding: 0 15px;
}

.nav-elements ul a,
.nav-elements .dropdown-toggle {
    font-size: 14px;
    font-weight: 500;
    color: #000000;
    text-decoration: none;
    font-family: var(--heading-font);
}

.nav-elements ul a.active {
    position: relative;
}

.nav-elements ul li {
    position: relative;
}

.dropdown-toggle {
    cursor: pointer;
    display: flex;
    align-items: center;
    gap: 6px;
}

.dropdown-menu {
    position: absolute;
    top: 100%;
    left: 0;
    background: #fff;
    min-width: 200px;
    flex-direction: column;
    align-items: flex-start !important;
    line-height: 30px;
    padding: 10px 0;
    border-radius: 8px;
    box-shadow: 0 10px 30px #0000001a;
    opacity: 0;
    visibility: hidden;
    transform: translateY(10px);
    transition: all 0.3s ease;
    z-index: 100;
}

.dropdown-menu li {
    padding: 8px 20px;
}

.dropdown-menu li a {
    color: #474747;
    text-decoration: none;
    display: block;
}

.dropdown-menu li a:hover {
    color: var(--c1);
}

.dropdown i {
    font-size: 12px;
}

/* Open state */
.dropdown.open .dropdown-menu {
    opacity: 1;
    visibility: visible;
    transform: translateY(0);
}

.ab-lgo-bx {
    background-color: #000000;
    border-radius: 50%;
    padding: 10px;
    height: 50px;
    width: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.ab-lgo-bx i {
    color: #eeeeee;
    font-size: 22px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.logo img {
    width: 210px;
}
/* ... */

